reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__apply.rs_line_901_col_5.log

*** crates/tracewake-core/src/events/apply.rs:901:5: replace parse_observation_payload -> Result<Observation, EpistemicApplyError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/apply.rs
+++ replace parse_observation_payload -> Result<Observation, EpistemicApplyError> with Ok(Default::default())
@@ -893,53 +893,17 @@
             })
         })
         .collect()
 }
 
 fn parse_observation_payload(
     payload: &BTreeMap<&str, &str>,
 ) -> Result<Observation, EpistemicApplyError> {
-    let observer_actor_id = parse_actor_id_epistemic(payload, "observer_actor_id")?;
-    let observer_place_id = parse_place_id_epistemic(payload, "observer_place_id")?;
-    let source_event_id = parse_event_id_epistemic(payload, "source_event_id")
-        .map_err(|_| EpistemicApplyError::MissingSource)?;
-    let channel = parse_channel(payload)?;
-    let (subject, target) = if let Some(container_id) = payload.get("container_id") {
-        let container_id =
-            ContainerId::new(*container_id).map_err(|_| EpistemicApplyError::BadPayload {
-                key: "container_id",
-                value: (*container_id).to_string(),
-            })?;
-        (
-            ObservationSubject::Container(container_id.clone()),
-            ObservationTarget::Container(container_id),
-        )
-    } else {
-        let place_id = parse_place_id_epistemic(payload, "place_id")?;
-        (
-            ObservationSubject::Place(place_id.clone()),
-            ObservationTarget::Place(place_id),
-        )
-    };
-    let mut observation = Observation::new(
-        parse_observation_id(payload, "observation_id")?,
-        observer_actor_id,
-        channel,
-        parse_tick(payload, "observed_tick")?,
-        observer_place_id,
-        subject,
-        target,
-        parse_confidence(payload)?,
-        SourceRef::Event(source_event_id),
-    );
-    if let Some(alternatives) = payload.get("alternatives") {
-        observation = observation.with_alternatives(parse_alternatives(alternatives));
-    }
-    Ok(observation)
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn parse_alternatives(value: &str) -> std::collections::BTreeSet<String> {
     value
         .split(',')
         .filter(|part| !part.is_empty())
         .map(ToString::to_string)
         .collect()


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/apply.rs` has changed (1781910351.123923819s, 7s after last build at 1781910344.343923785s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused imports: `ObservationSubject` and `ObservationTarget`
 --> crates/tracewake-core/src/events/apply.rs:8:18
  |
8 |     Observation, ObservationSubject, ObservationTarget, Proposition, SourceRef, Stance,
  |                  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `Observation: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:901:8
    |
901 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `Observation`
   --> crates/tracewake-core/src/epistemics/observation.rs:108:1
    |
108 | pub struct Observation {
    | ^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `observation::Observation: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:901:8
    |
901 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `observation::Observation`
   --> crates/tracewake-core/src/epistemics/observation.rs:108:1
    |
108 | pub struct Observation {
    | ^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
